# rocket-todo-app

./: Cargo.toml  README.md  rocket.toml
src/: main.rs
static/: package-lock.json  package.json  tsconfig.json
static/src/: main.tsx
